[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Mahibaalan Annadurai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
werkzeug = "^3.0.3"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
