[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Mahibaalan Annadurai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
werkzeug = "^3.0.3"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
altair = "^5.3.0"
weasyprint = "^62.3"
altair-saver = "^0.5.0"
altair-viewer = "^0.4.0"
vl-convert-python = "^1.5.0"
sqlalchemy = "^2.0.31"
pymongo = "^4.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
